--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "1f3bfdc1-eade-4a75-9d96-823476142fb3",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "76f3997b-7600-4c1d-90fa-119c425f362d",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "5519ce23-7929-4e9c-931a-e9f43ef4de9f",
    "metadata": {},
    "outputs": [
@@ -175,14 +175,555 @@
     }
    ],
    "source": [
-    "for  in df.iloc[:,6:]:\n",
+    "for  c in df.columns[6:]:\n",
     "    print(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "f634dd52-be60-4109-a8b7-50740225539d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "94e8934e-983b-42cd-9e5f-5d503fb0195b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(6, 23)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(6,len(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "aa518991-0954-4dfe-8f46-8f6dbb49d244",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fdf=df.iloc[0:,6:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7be0a407-c15d-4a73-8804-6a1aac1e1312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2025-01-07</th>\n",
+       "      <th>2025-01-08</th>\n",
+       "      <th>2025-01-09</th>\n",
+       "      <th>2025-01-10</th>\n",
+       "      <th>2025-01-13</th>\n",
+       "      <th>2025-01-14</th>\n",
+       "      <th>2025-01-15</th>\n",
+       "      <th>2025-01-16</th>\n",
+       "      <th>2025-01-17</th>\n",
+       "      <th>2025-01-20</th>\n",
+       "      <th>2025-01-21</th>\n",
+       "      <th>2025-01-22</th>\n",
+       "      <th>2025-01-23</th>\n",
+       "      <th>2025-01-24</th>\n",
+       "      <th>2025-02-03</th>\n",
+       "      <th>2025-02-04</th>\n",
+       "      <th>2025-02-05</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>순대국</td>\n",
+       "      <td>비지찌개</td>\n",
+       "      <td>냉동김밥,컵라면</td>\n",
+       "      <td>잔치국수</td>\n",
+       "      <td>제육덮밥</td>\n",
+       "      <td>소고기무국</td>\n",
+       "      <td>소고기덮밥</td>\n",
+       "      <td>오징어 덮밥</td>\n",
+       "      <td>짜장면</td>\n",
+       "      <td>집밥 도시락</td>\n",
+       "      <td>소고기무국</td>\n",
+       "      <td>-</td>\n",
+       "      <td>오징어덮밥</td>\n",
+       "      <td>볶음밥</td>\n",
+       "      <td>짜장면</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>닭개장</td>\n",
+       "      <td>규동</td>\n",
+       "      <td>얼큰 순대국밥</td>\n",
+       "      <td>스파게티</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>순대국밥 고기만</td>\n",
+       "      <td>파스타</td>\n",
+       "      <td>간짜장</td>\n",
+       "      <td>스파게티</td>\n",
+       "      <td>버섯 비프 카레</td>\n",
+       "      <td>스파게티</td>\n",
+       "      <td>설렁탕</td>\n",
+       "      <td>치킨마요덮밥</td>\n",
+       "      <td>등심돈까스</td>\n",
+       "      <td>치즈라면, 김밥</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>닭개장(특) , 꽈배기</td>\n",
+       "      <td>주먹밥</td>\n",
+       "      <td>얼큰 순대국밥</td>\n",
+       "      <td>불닭로제찜닭</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>순대국밥</td>\n",
+       "      <td>까르보나라 파스타</td>\n",
+       "      <td>간짜장 곱빼기</td>\n",
+       "      <td>참치김밥,라볶이</td>\n",
+       "      <td>Forrk 카레</td>\n",
+       "      <td>고등어구이,제육볶음</td>\n",
+       "      <td>육회비빔밥</td>\n",
+       "      <td>김치찌개</td>\n",
+       "      <td>안심까스</td>\n",
+       "      <td>라돈 모다기</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>닭개장</td>\n",
+       "      <td>주먹밥</td>\n",
+       "      <td>얼큰 순대국밥</td>\n",
+       "      <td>불닭로제찜닭</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>뼈해장국</td>\n",
+       "      <td>모짜렐라 토마토 파스타</td>\n",
+       "      <td>짬짜면</td>\n",
+       "      <td>&lt;결석&gt;</td>\n",
+       "      <td>함바그 카레</td>\n",
+       "      <td>고등어구이,제육볶음</td>\n",
+       "      <td>설렁탕</td>\n",
+       "      <td>치킨마요,찹쌀탕수육</td>\n",
+       "      <td>반반가츠</td>\n",
+       "      <td>모다기</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>볶음밥</td>\n",
+       "      <td>유부초밥</td>\n",
+       "      <td>볶음밥</td>\n",
+       "      <td>볶음밥 , 연어</td>\n",
+       "      <td>연어덮밥</td>\n",
+       "      <td>볶음밥</td>\n",
+       "      <td>연어덮밥</td>\n",
+       "      <td>샌드위치</td>\n",
+       "      <td>유부초밥</td>\n",
+       "      <td>유부초밥</td>\n",
+       "      <td>고등어구이,제육볶음</td>\n",
+       "      <td>불고기</td>\n",
+       "      <td>닭다리살 간장조림</td>\n",
+       "      <td>-</td>\n",
+       "      <td>닭죽</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>닭개장</td>\n",
+       "      <td>스키야키</td>\n",
+       "      <td>참깨라면 작은컵,삼각김밥</td>\n",
+       "      <td>불닭로제찜닭</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "      <td>짬짜면</td>\n",
+       "      <td>떡라면</td>\n",
+       "      <td>카레</td>\n",
+       "      <td>쉐이크</td>\n",
+       "      <td>쉐이크 , 샌드위치</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>부리또</td>\n",
+       "      <td>잔치국수</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>자장면</td>\n",
+       "      <td>텐동</td>\n",
+       "      <td>얼큰 설렁탕</td>\n",
+       "      <td>부대찌개</td>\n",
+       "      <td>참치김치찌개</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>햄 김치찌개</td>\n",
+       "      <td>비빔,잔치 국수 반반</td>\n",
+       "      <td>안심 돈카츠</td>\n",
+       "      <td>백반</td>\n",
+       "      <td>얼큰미나리 샤브세트</td>\n",
+       "      <td>순두부 찌개</td>\n",
+       "      <td>육회비빔밥</td>\n",
+       "      <td>순두부찌개</td>\n",
+       "      <td>김치 찌개</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>덮밥</td>\n",
+       "      <td>덮밥</td>\n",
+       "      <td>설렁탕</td>\n",
+       "      <td>부대찌개</td>\n",
+       "      <td>김밥</td>\n",
+       "      <td>김밥</td>\n",
+       "      <td>오므라이스</td>\n",
+       "      <td>돈까스</td>\n",
+       "      <td>볶음밥 , 컵라면</td>\n",
+       "      <td>볶음밥</td>\n",
+       "      <td>얼큰미나리 샤브세트</td>\n",
+       "      <td>오므라이스</td>\n",
+       "      <td>김밥</td>\n",
+       "      <td>김치찌개</td>\n",
+       "      <td>샌드위치</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>볶음밥</td>\n",
+       "      <td>규동</td>\n",
+       "      <td>한우 곰탕</td>\n",
+       "      <td>부대찌개</td>\n",
+       "      <td>꽃게 된장찌개</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>생고기김치찌개,라면사리</td>\n",
+       "      <td>비빔국수 , 반 계란 김밥</td>\n",
+       "      <td>안심 돈카츠</td>\n",
+       "      <td>낙지 볶음</td>\n",
+       "      <td>얼큰미나리 샤브세트</td>\n",
+       "      <td>햄 김치찌개</td>\n",
+       "      <td>육회비빔밥</td>\n",
+       "      <td>콩나물해장국</td>\n",
+       "      <td>제육볶음</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>일반 짬뽕 보통</td>\n",
+       "      <td>무공 옛날돈가스</td>\n",
+       "      <td>얼큰 설렁탕</td>\n",
+       "      <td>부대찌개</td>\n",
+       "      <td>고기김치찌개,라면세트</td>\n",
+       "      <td>한솥</td>\n",
+       "      <td>순두부찌개</td>\n",
+       "      <td>반반국수(비빔&amp;잔치)</td>\n",
+       "      <td>카레 돈카츠 세트</td>\n",
+       "      <td>제육볶음</td>\n",
+       "      <td>x</td>\n",
+       "      <td>순두부 찌개</td>\n",
+       "      <td>육회비빔밥</td>\n",
+       "      <td>김치찌개,라면</td>\n",
+       "      <td>제육볶음</td>\n",
+       "      <td>-</td>\n",
+       "      <td>-</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     2025-01-07 2025-01-08     2025-01-09 2025-01-10   2025-01-13 2025-01-14  \\\n",
+       "0           순대국       비지찌개       냉동김밥,컵라면       잔치국수         제육덮밥      소고기무국   \n",
+       "1           닭개장         규동        얼큰 순대국밥       스파게티           한솥   순대국밥 고기만   \n",
+       "2  닭개장(특) , 꽈배기        주먹밥        얼큰 순대국밥     불닭로제찜닭           한솥       순대국밥   \n",
+       "3           닭개장        주먹밥        얼큰 순대국밥     불닭로제찜닭           한솥       뼈해장국   \n",
+       "4           볶음밥       유부초밥            볶음밥   볶음밥 , 연어         연어덮밥        볶음밥   \n",
+       "5           닭개장       스키야키  참깨라면 작은컵,삼각김밥     불닭로제찜닭            -          -   \n",
+       "6           자장면         텐동         얼큰 설렁탕       부대찌개       참치김치찌개         한솥   \n",
+       "7            덮밥         덮밥            설렁탕       부대찌개           김밥         김밥   \n",
+       "8           볶음밥         규동          한우 곰탕       부대찌개      꽃게 된장찌개         한솥   \n",
+       "9      일반 짬뽕 보통   무공 옛날돈가스         얼큰 설렁탕       부대찌개  고기김치찌개,라면세트         한솥   \n",
+       "\n",
+       "     2025-01-15      2025-01-16 2025-01-17 2025-01-20  2025-01-21  2025-01-22  \\\n",
+       "0         소고기덮밥          오징어 덮밥        짜장면     집밥 도시락       소고기무국           -   \n",
+       "1           파스타             간짜장       스파게티   버섯 비프 카레        스파게티         설렁탕   \n",
+       "2     까르보나라 파스타         간짜장 곱빼기   참치김밥,라볶이   Forrk 카레  고등어구이,제육볶음       육회비빔밥   \n",
+       "3  모짜렐라 토마토 파스타             짬짜면       <결석>     함바그 카레  고등어구이,제육볶음         설렁탕   \n",
+       "4          연어덮밥            샌드위치       유부초밥       유부초밥  고등어구이,제육볶음         불고기   \n",
+       "5             -             짬짜면        떡라면         카레         쉐이크  쉐이크 , 샌드위치   \n",
+       "6        햄 김치찌개     비빔,잔치 국수 반반     안심 돈카츠         백반  얼큰미나리 샤브세트      순두부 찌개   \n",
+       "7         오므라이스             돈까스  볶음밥 , 컵라면        볶음밥  얼큰미나리 샤브세트       오므라이스   \n",
+       "8  생고기김치찌개,라면사리  비빔국수 , 반 계란 김밥     안심 돈카츠      낙지 볶음  얼큰미나리 샤브세트      햄 김치찌개   \n",
+       "9         순두부찌개     반반국수(비빔&잔치)  카레 돈카츠 세트       제육볶음           x      순두부 찌개   \n",
+       "\n",
+       "   2025-01-23 2025-01-24 2025-02-03 2025-02-04 2025-02-05  \n",
+       "0       오징어덮밥        볶음밥        짜장면          -          -  \n",
+       "1      치킨마요덮밥      등심돈까스   치즈라면, 김밥          -          -  \n",
+       "2        김치찌개       안심까스     라돈 모다기          -          -  \n",
+       "3  치킨마요,찹쌀탕수육       반반가츠        모다기          -          -  \n",
+       "4   닭다리살 간장조림          -         닭죽          -          -  \n",
+       "5          한솥        부리또       잔치국수          -          -  \n",
+       "6       육회비빔밥      순두부찌개      김치 찌개          -          -  \n",
+       "7          김밥       김치찌개       샌드위치          -          -  \n",
+       "8       육회비빔밥     콩나물해장국       제육볶음          -          -  \n",
+       "9       육회비빔밥    김치찌개,라면       제육볶음          -          -  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "d520e782-e14b-473c-8798-d9384aa995e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2025-01-07,순대국,TOM)\n",
+      "(2025-01-08,비지찌개,TOM)\n",
+      "(2025-01-09,냉동김밥,컵라면,TOM)\n",
+      "(2025-01-10,잔치국수,TOM)\n",
+      "(2025-01-13,제육덮밥,TOM)\n",
+      "(2025-01-14,소고기무국,TOM)\n",
+      "(2025-01-15,소고기덮밥,TOM)\n",
+      "(2025-01-16,오징어 덮밥,TOM)\n",
+      "(2025-01-17,짜장면,TOM)\n",
+      "(2025-01-20,집밥 도시락,TOM)\n",
+      "(2025-01-21,소고기무국,TOM)\n",
+      "(2025-01-22,-,TOM)\n",
+      "(2025-01-23,오징어덮밥,TOM)\n",
+      "(2025-01-24,볶음밥,TOM)\n",
+      "(2025-02-03,짜장면,TOM)\n",
+      "(2025-02-04,-,TOM)\n",
+      "(2025-02-05,-,TOM)\n",
+      "(2025-01-07,닭개장,cho)\n",
+      "(2025-01-08,규동,cho)\n",
+      "(2025-01-09,얼큰 순대국밥,cho)\n",
+      "(2025-01-10,스파게티,cho)\n",
+      "(2025-01-13,한솥,cho)\n",
+      "(2025-01-14,순대국밥 고기만,cho)\n",
+      "(2025-01-15,파스타,cho)\n",
+      "(2025-01-16,간짜장,cho)\n",
+      "(2025-01-17,스파게티,cho)\n",
+      "(2025-01-20,버섯 비프 카레,cho)\n",
+      "(2025-01-21,스파게티,cho)\n",
+      "(2025-01-22,설렁탕,cho)\n",
+      "(2025-01-23,치킨마요덮밥,cho)\n",
+      "(2025-01-24,등심돈까스,cho)\n",
+      "(2025-02-03,치즈라면, 김밥,cho)\n",
+      "(2025-02-04,-,cho)\n",
+      "(2025-02-05,-,cho)\n",
+      "(2025-01-07,닭개장(특) , 꽈배기,hyun)\n",
+      "(2025-01-08,주먹밥,hyun)\n",
+      "(2025-01-09,얼큰 순대국밥,hyun)\n",
+      "(2025-01-10,불닭로제찜닭,hyun)\n",
+      "(2025-01-13,한솥,hyun)\n",
+      "(2025-01-14,순대국밥,hyun)\n",
+      "(2025-01-15,까르보나라 파스타,hyun)\n",
+      "(2025-01-16,간짜장 곱빼기,hyun)\n",
+      "(2025-01-17,참치김밥,라볶이,hyun)\n",
+      "(2025-01-20,Forrk 카레,hyun)\n",
+      "(2025-01-21,고등어구이,제육볶음,hyun)\n",
+      "(2025-01-22,육회비빔밥,hyun)\n",
+      "(2025-01-23,김치찌개,hyun)\n",
+      "(2025-01-24,안심까스,hyun)\n",
+      "(2025-02-03,라돈 모다기,hyun)\n",
+      "(2025-02-04,-,hyun)\n",
+      "(2025-02-05,-,hyun)\n",
+      "(2025-01-07,닭개장,JERRY)\n",
+      "(2025-01-08,주먹밥,JERRY)\n",
+      "(2025-01-09,얼큰 순대국밥,JERRY)\n",
+      "(2025-01-10,불닭로제찜닭,JERRY)\n",
+      "(2025-01-13,한솥,JERRY)\n",
+      "(2025-01-14,뼈해장국,JERRY)\n",
+      "(2025-01-15,모짜렐라 토마토 파스타,JERRY)\n",
+      "(2025-01-16,짬짜면,JERRY)\n",
+      "(2025-01-17,<결석>,JERRY)\n",
+      "(2025-01-20,함바그 카레,JERRY)\n",
+      "(2025-01-21,고등어구이,제육볶음,JERRY)\n",
+      "(2025-01-22,설렁탕,JERRY)\n",
+      "(2025-01-23,치킨마요,찹쌀탕수육,JERRY)\n",
+      "(2025-01-24,반반가츠,JERRY)\n",
+      "(2025-02-03,모다기,JERRY)\n",
+      "(2025-02-04,-,JERRY)\n",
+      "(2025-02-05,-,JERRY)\n",
+      "(2025-01-07,볶음밥,SEO)\n",
+      "(2025-01-08,유부초밥,SEO)\n",
+      "(2025-01-09,볶음밥,SEO)\n",
+      "(2025-01-10,볶음밥 , 연어,SEO)\n",
+      "(2025-01-13,연어덮밥,SEO)\n",
+      "(2025-01-14,볶음밥,SEO)\n",
+      "(2025-01-15,연어덮밥,SEO)\n",
+      "(2025-01-16,샌드위치,SEO)\n",
+      "(2025-01-17,유부초밥,SEO)\n",
+      "(2025-01-20,유부초밥,SEO)\n",
+      "(2025-01-21,고등어구이,제육볶음,SEO)\n",
+      "(2025-01-22,불고기,SEO)\n",
+      "(2025-01-23,닭다리살 간장조림,SEO)\n",
+      "(2025-01-24,-,SEO)\n",
+      "(2025-02-03,닭죽,SEO)\n",
+      "(2025-02-04,-,SEO)\n",
+      "(2025-02-05,-,SEO)\n",
+      "(2025-01-07,닭개장,jiwon)\n",
+      "(2025-01-08,스키야키,jiwon)\n",
+      "(2025-01-09,참깨라면 작은컵,삼각김밥,jiwon)\n",
+      "(2025-01-10,불닭로제찜닭,jiwon)\n",
+      "(2025-01-13,-,jiwon)\n",
+      "(2025-01-14,-,jiwon)\n",
+      "(2025-01-15,-,jiwon)\n",
+      "(2025-01-16,짬짜면,jiwon)\n",
+      "(2025-01-17,떡라면,jiwon)\n",
+      "(2025-01-20,카레,jiwon)\n",
+      "(2025-01-21,쉐이크,jiwon)\n",
+      "(2025-01-22,쉐이크 , 샌드위치,jiwon)\n",
+      "(2025-01-23,한솥,jiwon)\n",
+      "(2025-01-24,부리또,jiwon)\n",
+      "(2025-02-03,잔치국수,jiwon)\n",
+      "(2025-02-04,-,jiwon)\n",
+      "(2025-02-05,-,jiwon)\n",
+      "(2025-01-07,자장면,jacob)\n",
+      "(2025-01-08,텐동,jacob)\n",
+      "(2025-01-09,얼큰 설렁탕,jacob)\n",
+      "(2025-01-10,부대찌개,jacob)\n",
+      "(2025-01-13,참치김치찌개,jacob)\n",
+      "(2025-01-14,한솥,jacob)\n",
+      "(2025-01-15,햄 김치찌개,jacob)\n",
+      "(2025-01-16,비빔,잔치 국수 반반,jacob)\n",
+      "(2025-01-17,안심 돈카츠,jacob)\n",
+      "(2025-01-20,백반,jacob)\n",
+      "(2025-01-21,얼큰미나리 샤브세트,jacob)\n",
+      "(2025-01-22,순두부 찌개,jacob)\n",
+      "(2025-01-23,육회비빔밥,jacob)\n",
+      "(2025-01-24,순두부찌개,jacob)\n",
+      "(2025-02-03,김치 찌개,jacob)\n",
+      "(2025-02-04,-,jacob)\n",
+      "(2025-02-05,-,jacob)\n",
+      "(2025-01-07,덮밥,heejin)\n",
+      "(2025-01-08,덮밥,heejin)\n",
+      "(2025-01-09,설렁탕,heejin)\n",
+      "(2025-01-10,부대찌개,heejin)\n",
+      "(2025-01-13,김밥,heejin)\n",
+      "(2025-01-14,김밥,heejin)\n",
+      "(2025-01-15,오므라이스,heejin)\n",
+      "(2025-01-16,돈까스,heejin)\n",
+      "(2025-01-17,볶음밥 , 컵라면,heejin)\n",
+      "(2025-01-20,볶음밥,heejin)\n",
+      "(2025-01-21,얼큰미나리 샤브세트,heejin)\n",
+      "(2025-01-22,오므라이스,heejin)\n",
+      "(2025-01-23,김밥,heejin)\n",
+      "(2025-01-24,김치찌개,heejin)\n",
+      "(2025-02-03,샌드위치,heejin)\n",
+      "(2025-02-04,-,heejin)\n",
+      "(2025-02-05,-,heejin)\n",
+      "(2025-01-07,볶음밥,lucas)\n",
+      "(2025-01-08,규동,lucas)\n",
+      "(2025-01-09,한우 곰탕,lucas)\n",
+      "(2025-01-10,부대찌개,lucas)\n",
+      "(2025-01-13,꽃게 된장찌개,lucas)\n",
+      "(2025-01-14,한솥,lucas)\n",
+      "(2025-01-15,생고기김치찌개,라면사리,lucas)\n",
+      "(2025-01-16,비빔국수 , 반 계란 김밥,lucas)\n",
+      "(2025-01-17,안심 돈카츠,lucas)\n",
+      "(2025-01-20,낙지 볶음,lucas)\n",
+      "(2025-01-21,얼큰미나리 샤브세트,lucas)\n",
+      "(2025-01-22,햄 김치찌개,lucas)\n",
+      "(2025-01-23,육회비빔밥,lucas)\n",
+      "(2025-01-24,콩나물해장국,lucas)\n",
+      "(2025-02-03,제육볶음,lucas)\n",
+      "(2025-02-04,-,lucas)\n",
+      "(2025-02-05,-,lucas)\n",
+      "(2025-01-07,일반 짬뽕 보통,nuni)\n",
+      "(2025-01-08,무공 옛날돈가스,nuni)\n",
+      "(2025-01-09,얼큰 설렁탕,nuni)\n",
+      "(2025-01-10,부대찌개,nuni)\n",
+      "(2025-01-13,고기김치찌개,라면세트,nuni)\n",
+      "(2025-01-14,한솥,nuni)\n",
+      "(2025-01-15,순두부찌개,nuni)\n",
+      "(2025-01-16,반반국수(비빔&잔치),nuni)\n",
+      "(2025-01-17,카레 돈카츠 세트,nuni)\n",
+      "(2025-01-20,제육볶음,nuni)\n",
+      "(2025-01-21,x,nuni)\n",
+      "(2025-01-22,순두부 찌개,nuni)\n",
+      "(2025-01-23,육회비빔밥,nuni)\n",
+      "(2025-01-24,김치찌개,라면,nuni)\n",
+      "(2025-02-03,제육볶음,nuni)\n",
+      "(2025-02-04,-,nuni)\n",
+      "(2025-02-05,-,nuni)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(fdf)):\n",
+    "    for j in range(len(fdf.columns)):\n",
+    "        ldt=fdf.columns[j]\n",
+    "        fod=fdf.iat[i,j]\n",
+    "        print(f\"({ldt},{fod},{df.iat[i,0]})\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "190c2c04-bcae-4a77-92ba-95941d30b59f",
    "metadata": {},
    "outputs": [],
    "source": []
