lunch menu with melt

--- a/lunchmenu.ipynb
+++ b/lunchmenu.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1f3bfdc1-eade-4a75-9d96-823476142fb3",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "76f3997b-7600-4c1d-90fa-119c425f362d",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "[2 rows x 23 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5519ce23-7929-4e9c-931a-e9f43ef4de9f",
    "metadata": {},
    "outputs": [
@@ -181,59 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f634dd52-be60-4109-a8b7-50740225539d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "94e8934e-983b-42cd-9e5f-5d503fb0195b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "range(6, 23)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "range(6,len(df.columns))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "aa518991-0954-4dfe-8f46-8f6dbb49d244",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fdf=df.iloc[0:,6:]"
+    "fdf=df.iloc[0:,6:-2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "7be0a407-c15d-4a73-8804-6a1aac1e1312",
    "metadata": {},
    "outputs": [
@@ -273,8 +231,6 @@
        "      <th>2025-01-23</th>\n",
        "      <th>2025-01-24</th>\n",
        "      <th>2025-02-03</th>\n",
-       "      <th>2025-02-04</th>\n",
-       "      <th>2025-02-05</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -295,8 +251,6 @@
        "      <td>오징어덮밥</td>\n",
        "      <td>볶음밥</td>\n",
        "      <td>짜장면</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -315,8 +269,6 @@
        "      <td>치킨마요덮밥</td>\n",
        "      <td>등심돈까스</td>\n",
        "      <td>치즈라면, 김밥</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -335,8 +287,6 @@
        "      <td>김치찌개</td>\n",
        "      <td>안심까스</td>\n",
        "      <td>라돈 모다기</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -355,8 +305,6 @@
        "      <td>치킨마요,찹쌀탕수육</td>\n",
        "      <td>반반가츠</td>\n",
        "      <td>모다기</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -375,8 +323,6 @@
        "      <td>닭다리살 간장조림</td>\n",
        "      <td>-</td>\n",
        "      <td>닭죽</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -395,8 +341,6 @@
        "      <td>한솥</td>\n",
        "      <td>부리또</td>\n",
        "      <td>잔치국수</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -415,8 +359,6 @@
        "      <td>육회비빔밥</td>\n",
        "      <td>순두부찌개</td>\n",
        "      <td>김치 찌개</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -435,8 +377,6 @@
        "      <td>김밥</td>\n",
        "      <td>김치찌개</td>\n",
        "      <td>샌드위치</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -455,8 +395,6 @@
        "      <td>육회비빔밥</td>\n",
        "      <td>콩나물해장국</td>\n",
        "      <td>제육볶음</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -475,8 +413,6 @@
        "      <td>육회비빔밥</td>\n",
        "      <td>김치찌개,라면</td>\n",
        "      <td>제육볶음</td>\n",
-       "      <td>-</td>\n",
-       "      <td>-</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -507,20 +443,20 @@
        "8  생고기김치찌개,라면사리  비빔국수 , 반 계란 김밥     안심 돈카츠      낙지 볶음  얼큰미나리 샤브세트      햄 김치찌개   \n",
        "9         순두부찌개     반반국수(비빔&잔치)  카레 돈카츠 세트       제육볶음           x      순두부 찌개   \n",
        "\n",
-       "   2025-01-23 2025-01-24 2025-02-03 2025-02-04 2025-02-05  \n",
-       "0       오징어덮밥        볶음밥        짜장면          -          -  \n",
-       "1      치킨마요덮밥      등심돈까스   치즈라면, 김밥          -          -  \n",
-       "2        김치찌개       안심까스     라돈 모다기          -          -  \n",
-       "3  치킨마요,찹쌀탕수육       반반가츠        모다기          -          -  \n",
-       "4   닭다리살 간장조림          -         닭죽          -          -  \n",
-       "5          한솥        부리또       잔치국수          -          -  \n",
-       "6       육회비빔밥      순두부찌개      김치 찌개          -          -  \n",
-       "7          김밥       김치찌개       샌드위치          -          -  \n",
-       "8       육회비빔밥     콩나물해장국       제육볶음          -          -  \n",
-       "9       육회비빔밥    김치찌개,라면       제육볶음          -          -  "
+       "   2025-01-23 2025-01-24 2025-02-03  \n",
+       "0       오징어덮밥        볶음밥        짜장면  \n",
+       "1      치킨마요덮밥      등심돈까스   치즈라면, 김밥  \n",
+       "2        김치찌개       안심까스     라돈 모다기  \n",
+       "3  치킨마요,찹쌀탕수육       반반가츠        모다기  \n",
+       "4   닭다리살 간장조림          -         닭죽  \n",
+       "5          한솥        부리또       잔치국수  \n",
+       "6       육회비빔밥      순두부찌개      김치 찌개  \n",
+       "7          김밥       김치찌개       샌드위치  \n",
+       "8       육회비빔밥     콩나물해장국       제육볶음  \n",
+       "9       육회비빔밥    김치찌개,라면       제육볶음  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "d520e782-e14b-473c-8798-d9384aa995e3",
    "metadata": {},
    "outputs": [
@@ -554,8 +490,6 @@
       "(2025-01-23,오징어덮밥,TOM)\n",
       "(2025-01-24,볶음밥,TOM)\n",
       "(2025-02-03,짜장면,TOM)\n",
-      "(2025-02-04,-,TOM)\n",
-      "(2025-02-05,-,TOM)\n",
       "(2025-01-07,닭개장,cho)\n",
       "(2025-01-08,규동,cho)\n",
       "(2025-01-09,얼큰 순대국밥,cho)\n",
@@ -571,8 +505,6 @@
       "(2025-01-23,치킨마요덮밥,cho)\n",
       "(2025-01-24,등심돈까스,cho)\n",
       "(2025-02-03,치즈라면, 김밥,cho)\n",
-      "(2025-02-04,-,cho)\n",
-      "(2025-02-05,-,cho)\n",
       "(2025-01-07,닭개장(특) , 꽈배기,hyun)\n",
       "(2025-01-08,주먹밥,hyun)\n",
       "(2025-01-09,얼큰 순대국밥,hyun)\n",
@@ -588,8 +520,6 @@
       "(2025-01-23,김치찌개,hyun)\n",
       "(2025-01-24,안심까스,hyun)\n",
       "(2025-02-03,라돈 모다기,hyun)\n",
-      "(2025-02-04,-,hyun)\n",
-      "(2025-02-05,-,hyun)\n",
       "(2025-01-07,닭개장,JERRY)\n",
       "(2025-01-08,주먹밥,JERRY)\n",
       "(2025-01-09,얼큰 순대국밥,JERRY)\n",
@@ -605,8 +535,6 @@
       "(2025-01-23,치킨마요,찹쌀탕수육,JERRY)\n",
       "(2025-01-24,반반가츠,JERRY)\n",
       "(2025-02-03,모다기,JERRY)\n",
-      "(2025-02-04,-,JERRY)\n",
-      "(2025-02-05,-,JERRY)\n",
       "(2025-01-07,볶음밥,SEO)\n",
       "(2025-01-08,유부초밥,SEO)\n",
       "(2025-01-09,볶음밥,SEO)\n",
@@ -622,8 +550,6 @@
       "(2025-01-23,닭다리살 간장조림,SEO)\n",
       "(2025-01-24,-,SEO)\n",
       "(2025-02-03,닭죽,SEO)\n",
-      "(2025-02-04,-,SEO)\n",
-      "(2025-02-05,-,SEO)\n",
       "(2025-01-07,닭개장,jiwon)\n",
       "(2025-01-08,스키야키,jiwon)\n",
       "(2025-01-09,참깨라면 작은컵,삼각김밥,jiwon)\n",
@@ -639,8 +565,6 @@
       "(2025-01-23,한솥,jiwon)\n",
       "(2025-01-24,부리또,jiwon)\n",
       "(2025-02-03,잔치국수,jiwon)\n",
-      "(2025-02-04,-,jiwon)\n",
-      "(2025-02-05,-,jiwon)\n",
       "(2025-01-07,자장면,jacob)\n",
       "(2025-01-08,텐동,jacob)\n",
       "(2025-01-09,얼큰 설렁탕,jacob)\n",
@@ -656,8 +580,6 @@
       "(2025-01-23,육회비빔밥,jacob)\n",
       "(2025-01-24,순두부찌개,jacob)\n",
       "(2025-02-03,김치 찌개,jacob)\n",
-      "(2025-02-04,-,jacob)\n",
-      "(2025-02-05,-,jacob)\n",
       "(2025-01-07,덮밥,heejin)\n",
       "(2025-01-08,덮밥,heejin)\n",
       "(2025-01-09,설렁탕,heejin)\n",
@@ -673,8 +595,6 @@
       "(2025-01-23,김밥,heejin)\n",
       "(2025-01-24,김치찌개,heejin)\n",
       "(2025-02-03,샌드위치,heejin)\n",
-      "(2025-02-04,-,heejin)\n",
-      "(2025-02-05,-,heejin)\n",
       "(2025-01-07,볶음밥,lucas)\n",
       "(2025-01-08,규동,lucas)\n",
       "(2025-01-09,한우 곰탕,lucas)\n",
@@ -690,8 +610,6 @@
       "(2025-01-23,육회비빔밥,lucas)\n",
       "(2025-01-24,콩나물해장국,lucas)\n",
       "(2025-02-03,제육볶음,lucas)\n",
-      "(2025-02-04,-,lucas)\n",
-      "(2025-02-05,-,lucas)\n",
       "(2025-01-07,일반 짬뽕 보통,nuni)\n",
       "(2025-01-08,무공 옛날돈가스,nuni)\n",
       "(2025-01-09,얼큰 설렁탕,nuni)\n",
@@ -706,9 +624,7 @@
       "(2025-01-22,순두부 찌개,nuni)\n",
       "(2025-01-23,육회비빔밥,nuni)\n",
       "(2025-01-24,김치찌개,라면,nuni)\n",
-      "(2025-02-03,제육볶음,nuni)\n",
-      "(2025-02-04,-,nuni)\n",
-      "(2025-02-05,-,nuni)\n"
+      "(2025-02-03,제육볶음,nuni)\n"
      ]
     }
    ],
